// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box renders correctly with backgroundColor prop 1`] = `
<div
  className="box"
/>
`;

exports[`Box renders correctly with border prop 1`] = `
<div
  className="box"
/>
`;

exports[`Box renders correctly with borderColor prop 1`] = `
<div
  className="box"
/>
`;

exports[`Box renders correctly with children 1`] = `
<div
  className="box"
>
  Child
</div>
`;

exports[`Box renders correctly with empty props 1`] = `
<div
  className="box"
/>
`;

exports[`Box renders correctly with margin prop 1`] = `
<div
  className="box"
/>
`;

exports[`Box renders correctly with marginEnd prop 1`] = `
<div
  className="box"
/>
`;

exports[`Box renders correctly with marginStart prop 1`] = `
<div
  className="box"
/>
`;

exports[`Box renders correctly with marginTop prop 1`] = `
<div
  className="box"
/>
`;

exports[`Box renders correctly with marginX prop 1`] = `
<div
  className="box"
/>
`;

exports[`Box renders correctly with marginY prop 1`] = `
<div
  className="box"
/>
`;

exports[`Box renders correctly with padding prop 1`] = `
<div
  className="box"
/>
`;

exports[`Box renders correctly with paddingBottom prop 1`] = `
<div
  className="box"
/>
`;

exports[`Box renders correctly with paddingEnd prop 1`] = `
<div
  className="box"
/>
`;

exports[`Box renders correctly with paddingStart prop 1`] = `
<div
  className="box"
/>
`;

exports[`Box renders correctly with paddingTop prop 1`] = `
<div
  className="box"
/>
`;

exports[`Box renders correctly with paddingX prop 1`] = `
<div
  className="box"
/>
`;

exports[`Box renders correctly with paddingY prop 1`] = `
<div
  className="box"
/>
`;

exports[`Box renders correctly with rounded prop 1`] = `
<div
  className="box"
/>
`;

exports[`Box renders correctly with shadow prop 1`] = `
<div
  className="box"
/>
`;

exports[`Box renders correctly with text prop 1`] = `
<div
  className="box"
/>
`;
